# Twitch

./: .gitignore  LICENSE.txt  README.md  Twitch.code-workspace  api.py  apigetter.py  apitest.py  callbackserver.py  chat.py  dddd.cfgd  fields.json  fields.py  fieldscsv.py  fixlist.py  genapifunc.py  importgenerator.py  list.txt  oauthtest.py  pyproject.toml  setup.cfg  table.txt  tifnobn.py
API/: TwitchAPI.py
CallbackServer/: CallbackServer.py
ChatInterface/: Exceptions.py  MessageHandler.py  TwitchChatInterface.py
OAuth/: oauth.py
PubSub/: PubSubConnector.py
Twitch/: .gitignore  Scope.py  __init__.py
Twitch/API/: Exceptions.py  TwitchAPI.py  _ApiRequest.py  __init__.py
Twitch/CallbackServer/: CallbackServer.py  __init__.py
Twitch/ChatInterface/: IrcController.py  TwitchChatInterface.py  __init__.py
Twitch/EventHandler/: EventHandler.py
Twitch/OAuth/: Oauth.py  __init__.py
Twitch/PubSub/: PubSubConnector.py  PubSubInterface.py  __init__.py
Twitch/Twitch_edog0049a.egg-info/: PKG-INFO  SOURCES.txt
Twitch/WebsocketClient/: WebsocketClient.py
Twitch/secretkeys/: apikeys.py
WebsocketClient/: WebsocketClient.py
WebsocketClient/tests/: client_run_test.py  testsever.py
distbackup/: twitch_edog0049a-0.0.38-py3-none-any.whl
src/: __init__.py
src/API/: ApiRequest.py  Exceptions.py  __init__.py
src/ChatInterface/: __init__.py
src/EventSub/: __init__.py
src/OAuth/: __init__.py  oauthtest.py
src/PubSub/: __init__.py
src/Twitch/: Scope.py  SubscriptionTypes.py  __init__.py
src/WebsocketClient/: WebsocketClient.py
test/: test1.py
(+78 files in other folders)
